--- a/leimu/CMakeLists.txt
+++ b/leimu/CMakeLists.txt
@@ -4,3 +4,9 @@ file(GLOB_RECURSE HEADERS include/*)
 
 add_library(leimu SHARED ${SOURCES} ${HEADERS})
 target_include_directories(leimu PUBLIC include)
+target_link_libraries(leimu PUBLIC
+        glfw
+        glm::glm
+        imgui
+        vulkan
+)
